--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -1,191 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/accountpag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".account_page">
 
-    <ScrollView
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginBottom="15sp"
+            app:cardElevation="15sp">
 
-            >
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardElevation="15sp"
-                android:layout_marginBottom="15sp"
-                >
+                android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <LinearLayout
-                        android:layout_width="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/text_dashboard"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:layout_margin="10dp"
+                        android:text="Himanshu Verma"
+                        android:textColor="#000000"
+                        android:textFontWeight="2000"
+                        android:textSize="34sp"
+                        android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/text_dashboard"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:text="Himanshu Verma"
-                            android:textColor="#000000"
-                            android:textFontWeight="2000"
-                            android:textSize="34sp"
-                            android:textStyle="bold" />
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="50sp"
-                            tools:srcCompat="@tools:sample/avatars"
-                            android:textAlignment="textEnd"
-                            android:layout_margin="10dp"
-                            />
-
-                    </LinearLayout>
-
-
-
-                    <View
+                    <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="2sp"
-                        android:background="#4D000000"
+                        android:layout_height="50sp"
+                        android:layout_margin="10dp"
+                        android:textAlignment="textEnd"
+                        tools:srcCompat="@tools:sample/avatars" />
 
-                        />
+                </LinearLayout>
+
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2sp"
+                    android:background="#4D000000"
+
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="10sp"
+                    android:text="Male-20"
+
+                    android:textSize="28sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2sp"
+                    android:background="#4D000000"
+
+                    />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="10sp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10sp"
+                        android:text="Edit"
+                        android:textSize="22sp" />
+                    "
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10sp"
-                        android:layout_marginTop="10sp"
-                        android:layout_marginBottom="10sp"
-                        android:text="Male-20"
-
-                        android:textSize="28sp" />
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="2sp"
-                        android:background="#4D000000"
-
-                        />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_marginTop="10sp"
-                        android:layout_marginBottom="10sp">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Edit"
-                            android:textSize="22sp"
-                            android:layout_marginLeft="10sp"/>
-                        "
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="textEnd"
-                            android:text="9084000392"
-                            android:textSize="24sp"
-                            android:paddingRight="10sp"
-                            />
-                    </LinearLayout>
-
+                        android:paddingRight="10sp"
+                        android:text="9084000392"
+                        android:textAlignment="textEnd"
+                        android:textSize="24sp" />
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
-            <!--            <LinearLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:orientation="vertical"-->
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-            <!--                >-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Family Members"
-                android:drawableLeft="@drawable/ic_baseline_family_restroom_24"
-                android:drawablePadding="20dp"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_margin="10sp"
-                android:textColor="@color/black"
+        <!--            <LinearLayout-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:orientation="vertical"-->
 
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Your orders"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_margin="10sp"
-                android:drawableLeft="@drawable/ic_baseline_library_books_24"
-                android:drawablePadding="20dp"
-                android:textColor="@color/black"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Address book"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_margin="10sp"
-                android:drawableLeft="@drawable/ic_baseline_location_on_24"
-                android:drawablePadding="20dp"
-                android:textColor="@color/black"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Settings"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_margin="10sp"
-                android:drawableLeft="@drawable/ic_baseline_settings_24"
-                android:drawablePadding="20dp"
-                android:textColor="@color/black"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Need help?"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_margin="10sp"
-                android:drawableLeft="@drawable/ic_baseline_help_24"
-                android:drawablePadding="20dp"
-                android:textColor="@color/black"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Logout"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_margin="10sp"
-                android:drawableLeft="@drawable/ic_baseline_login_24"
-                android:drawablePadding="20dp"
-                android:textColor="@color/black"
-                />
-            <!--            </LinearLayout>-->
+        <!--                >-->
+        <TextView
+            android:id="@+id/account_family"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:drawableLeft="@drawable/ic_baseline_family_restroom_24"
+            android:drawablePadding="20dp"
+            android:text="Family Members"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            android:textStyle="bold"
 
+            />
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/account_orders"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:drawableLeft="@drawable/ic_baseline_library_books_24"
+            android:drawablePadding="20dp"
+            android:text="Your orders"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:drawableLeft="@drawable/ic_baseline_location_on_24"
+            android:drawablePadding="20dp"
+            android:text="Address book"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            android:textStyle="bold" />
 
-    </ScrollView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:drawableLeft="@drawable/ic_baseline_settings_24"
+            android:drawablePadding="20dp"
+            android:text="Settings"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:drawableLeft="@drawable/ic_baseline_help_24"
+            android:drawablePadding="20dp"
+            android:text="Need help?"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:drawableLeft="@drawable/ic_baseline_login_24"
+            android:drawablePadding="20dp"
+            android:text="Logout"
+            android:textColor="@color/black"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+        <!--            </LinearLayout>-->
 
 
-</FrameLayout>
+    </LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
