--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,11 +14,11 @@
             android:id="@+id/action_homepage_to_upload_prescription"
             app:destination="@id/upload_prescription" />
         <action
+            android:id="@+id/action_homepage_to_my_cart"
+            app:destination="@id/my_cart" />
+        <action
             android:id="@+id/action_homepage_to_account_page"
             app:destination="@id/account_page" />
-        <action
-            android:id="@+id/action_homepage_to_health_records_page"
-            app:destination="@id/health_records_page" />
     </fragment>
     <fragment
         android:id="@+id/account_page"
@@ -67,11 +67,7 @@
         android:id="@+id/your_orders"
         android:name="com.example.apnicare.your_orders"
         android:label="fragment_your_orders"
-        tools:layout="@layout/fragment_your_orders" >
-        <action
-            android:id="@+id/action_your_orders_to_account_page"
-            app:destination="@id/account_page" />
-    </fragment>
+        tools:layout="@layout/fragment_your_orders" />
     <fragment
         android:id="@+id/address_book"
         android:name="com.example.apnicare.address_book"
@@ -88,18 +84,20 @@
         android:id="@+id/edit_address"
         android:name="com.example.apnicare.edit_address"
         android:label="fragment_edit_address"
-        tools:layout="@layout/fragment_edit_address" >
-        <action
-            android:id="@+id/action_edit_address_to_address_book"
-            app:destination="@id/address_book" />
-    </fragment>
+        tools:layout="@layout/fragment_edit_address" />
     <fragment
         android:id="@+id/family_members"
         android:name="com.example.apnicare.family_members"
         android:label="fragment_family_members"
-        tools:layout="@layout/fragment_family_members" >
-        <action
-            android:id="@+id/action_family_members_to_account_page"
-            app:destination="@id/account_page" />
-    </fragment>
+        tools:layout="@layout/fragment_family_members" />
+    <fragment
+        android:id="@+id/my_cart"
+        android:name="com.example.apnicare.my_cart"
+        android:label="fragment_my_cart"
+        tools:layout="@layout/fragment_my_cart" />
+    <fragment
+        android:id="@+id/search_medicine"
+        android:name="com.example.apnicare.search_medicine"
+        android:label="fragment_search_medicine"
+        tools:layout="@layout/fragment_search_medicine" />
 </navigation>
