--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -86,7 +86,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/cartbackround"
+        android:background="@color/transparent"
         android:contentDescription="@string/cart"
         android:elevation="5dp"
         android:minHeight="48dp"
