--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -18,14 +18,14 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="100dp"
             android:background="@drawable/searchview"
             android:elevation="6dp"
             android:iconifiedByDefault="false"
             android:padding="5dp"
-            android:queryBackground="@android:color/transparent"
             android:queryHint="Search here"
+            app:layout_constraintBottom_toTopOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -37,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="109dp"
             android:layout_marginTop="190dp"
-            android:background="#34E2D3"
+            android:background="@color/teal_200"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,10 +49,10 @@
             android:layout_height="48dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="#1C697B"
+            android:backgroundTint="@color/teal_700"
             android:elevation="10dp"
             android:text="@string/ordericon"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/white"
             app:cornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="@+id/view"
             app:layout_constraintTop_toTopOf="@+id/view"
@@ -68,7 +68,7 @@
             android:layout_marginBottom="76dp"
             android:text="@string/orderbyprescription"
             android:textAllCaps="false"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/view"
             app:layout_constraintStart_toStartOf="@id/view" />
@@ -91,7 +91,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/cartbackround"
+            android:background="@color/transparent"
             android:contentDescription="@string/cart"
             android:elevation="5dp"
             android:minHeight="48dp"
