--- a/app/src/main/res/layout/fragment_why_prescription_2.xml
+++ b/app/src/main/res/layout/fragment_why_prescription_2.xml
@@ -57,6 +57,7 @@ other factors"/>
     </LinearLayout>
 
     <Button
+        android:id="@+id/okay"
         android:layout_width= "match_parent"
         android:layout_height="wrap_content"
         android:text="Okay"
