--- a/app/src/main/res/layout/fragment_account_page.xml
+++ b/app/src/main/res/layout/fragment_account_page.xml
@@ -139,6 +139,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/account_addressbook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
@@ -150,6 +151,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/account_setting"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
