--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -7,9 +7,9 @@
     <item android:title="Search"
         android:icon="@drawable/ic_search"
         android:id="@+id/homesearchbottom"/>
-    <item android:title="Prescription"
-        android:icon="@drawable/ic_baseline_assignment_24"
-        android:id="@+id/bottomPrescription"/>
+<!--    <item android:title="Prescription"-->
+<!--        android:icon="@drawable/ic_baseline_assignment_24"-->
+<!--        android:id="@+id/bottomPrescription"/>-->
     <item android:title="Health Records"
         android:icon="@drawable/ic_baseline_library_books_24"
         android:id="@+id/healthrecordbutton"
