--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -55,11 +55,13 @@
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
-        android:drawableRight="@drawable/ic_round_arrow_forward_ios_24"
         android:fontFamily="@font/ibm_semibold"
         android:text="@string/next"
         android:textColor="@color/black"
         android:textSize="17sp"
+        app:icon="@drawable/ic_baseline_navigate_next_24"
+        app:iconGravity="textEnd"
+        app:iconTint="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -70,12 +72,14 @@
         android:layout_height="48dp"
         android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
-        android:drawableRight="@drawable/ic_round_arrow_forward_ios_24"
         android:fontFamily="@font/ibm_semibold"
         android:text="@string/conti"
         android:textColor="@color/black"
         android:textSize="17sp"
         android:visibility="invisible"
+        app:icon="@drawable/ic_baseline_navigate_next_24"
+        app:iconGravity="textEnd"
+        app:iconTint="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
