Your orders added

--- a/app/src/main/res/layout/fragment_your_orders.xml
+++ b/app/src/main/res/layout/fragment_your_orders.xml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".your_orders">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    tools:context=".your_orders"
+    android:orientation="vertical">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:showDividers="middle"
+        android:gravity="center_horizontal"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delivered"
+            android:textSize="24dp"
+            android:layout_margin="10sp"
+            android:gravity="left"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pending"
+            android:textSize="24dp"
+            android:layout_margin="10sp"
+            android:gravity="center"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirmed"
+            android:textSize="24dp"
+            android:layout_margin="10sp"
+            android:gravity="end"
+            />
+    </LinearLayout>
 
-</FrameLayout>
+    <include layout="@layout/your_orders_card"/>
+    <include layout="@layout/your_orders_card"/>
+    <include layout="@layout/your_orders_card"/>
+
+</LinearLayout>
