--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -7,7 +7,7 @@
     tools:context=".myCart.CartActivity">
     <androidx.fragment.app.FragmentContainerView
 
-        android:id="@+id/fragmentContainerView"
+        android:id="@+id/fragmentCartView"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
