--- a/app/src/main/res/layout/activity_your_orders.xml
+++ b/app/src/main/res/layout/activity_your_orders.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".address_page.AddressActivity">
+    tools:context=".YourOrders.YourOrdersActivity">
+
     <androidx.fragment.app.FragmentContainerView
 
-        android:id="@+id/fragmentAddressBook"
+        android:id="@+id/fragmentYourOrders"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
         app:defaultNavHost="true"
-        app:navGraph="@navigation/address_graph" />
+        app:navGraph="@navigation/your_orders_graph" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
