--- a/app/src/main/res/layout/fragment_address_book.xml
+++ b/app/src/main/res/layout/fragment_address_book.xml
@@ -27,7 +27,8 @@
         android:layout_below="@id/toolbars"
         app:cardElevation="20dp"
         app:cardCornerRadius="25dp"
-        android:layout_margin="15dp">
+        android:layout_margin="15dp"
+        >
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -48,7 +49,8 @@
                 android:backgroundTint="@color/white"
                 android:text="Edit"
                 android:textColor="@color/teal_200"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:id="@+id/editadd"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
