--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -25,9 +25,11 @@
             android:queryHint="Search here"
             app:layout_constraintBottom_toTopOf="@+id/view"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
         </SearchView>
 
@@ -46,7 +48,7 @@
             android:id="@+id/homeupload"
             android:layout_width="126dp"
             android:layout_height="48dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/teal_700"
             android:elevation="10dp"
@@ -55,7 +57,8 @@
             app:cornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="@+id/view"
             app:layout_constraintTop_toTopOf="@+id/view"
-            tools:ignore="TextContrastCheck" />
+            tools:ignore="TextContrastCheck"
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/textView2"
@@ -64,7 +67,7 @@
             android:layout_alignBottom="@id/view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="16dp"
-            android:layout_marginBottom="76dp"
+            android:layout_marginBottom="68dp"
             android:text="@string/orderbyprescription"
             android:textAllCaps="false"
             android:textColor="@color/black"
@@ -77,6 +80,7 @@
             android:layout_width="196dp"
             android:layout_height="55dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="0dp"
             android:text="@string/orderprescription"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="@+id/view"
@@ -103,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:contentDescription="@string/app_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
